Add Sage search engine support
Sage (https://github.com/lazear/sage) writes a single tab-delimited
results.sage.tsv and searches one or more mgf / mgf.gz / mzML / mzML.gz
files. Pick the tsv in the Database Searching dialog, choose "Sage" as the
file type and add the spectrum files: all 40 Sage columns become sortable
table columns, 13 useful ones shown by default.

SageImport.java:
- Parse the peptide grammar with inline modification masses, covering
  residue mods (C[+57.0215]), N-terminal ([+229.1629]-PEPTIDE) and
  C-terminal (PEPTIDE-[+12.34]) ones, and register each as a user PTM
  named "<mass> of <residue>" so the sequence strip and the PTM colour
  dialog resolve them.
- Unquote the CSV-quoted scannr field, which for mgf input holds the whole
  mgf TITLE line (quotes doubled, commas inside).
- Match the result file's `filename` against the loaded spectrum files by
  base name, ignoring a .gz suffix, so rows still resolve after the file
  has been decompressed. Every file used by the result file is checked up
  front and missing ones are listed in one message.
- Key each match as <file>_cus_<scannr>; for mzML the nativeID is resolved
  to a scan number through the index the dialog already builds.

DatabaseImportDialog.java:
- Add "Sage" to the result-type combo, plus a Sage-only filter row to
  exclude decoys (label = -1, on by default) and hits above 1% spectrum_q.
  The row is hidden for the other formats.
- Accept gzipped spectrum files everywhere in this dialog and decompress
  them to the temp folder on import. The copy is placed in a folder keyed
  by the source path, size and mtime so two runs holding files of the same
  name never share one, and is written to a .part file renamed on success
  so an interrupted run leaves nothing that looks complete.

Fixes found while building this:

- mzML import died on Java 9+ with ExceptionInInitializerError: JAXB's
  optimized accessor generation calls ClassLoader.defineClass reflectively,
  which throws Inacces